z-index image grid fix

--- a/wp-content/themes/koleto/sass/components/_image-grid.scss
+++ b/wp-content/themes/koleto/sass/components/_image-grid.scss
@@ -30,7 +30,7 @@
         @include media-breakpoint-down(md) {
             .segment {
                 margin:-1rem;
-                z-index:710;
+                z-index:400;
             }
         }
 
